WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128142
WK2: Selection callout bar does not scroll with the selection
https://bugs.webkit.org/show_bug.cgi?id=128142
Summary
WK2: Selection callout bar does not scroll with the selection
Enrica Casucci
Reported
2014-02-03 16:40:57 PST
Open a page in Safari on iOS. Select some text. The callout bar appears. Now scroll to a different position on the screen. Expected The callout disappears while scrolling and reappears when done. Actual The callout bar stays in the original position. <
rdar://problem/15970812
>
Attachments
Patch
(5.81 KB, patch)
2014-02-03 17:30 PST
,
Enrica Casucci
benjamin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2014-02-03 17:30:10 PST
Created
attachment 223050
[details]
Patch
Benjamin Poulain
Comment 2
2014-02-03 17:59:39 PST
Comment on
attachment 223050
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=223050&action=review
> Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:272 > + [_contentView willStartZoomOrScroll]; > +} > + > +- (void)scrollViewWillBeginDragging:(UIScrollView *)scrollView > +{ > + [_contentView willStartZoomOrScroll];
I may have to split those at some point, we'll see.
Enrica Casucci
Comment 3
2014-02-04 10:36:35 PST
Committed revision 163388
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug